--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mui/material": "^5.14.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,18 +13,24 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "multer-s3": "^2.10.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^10.1.5",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -53,5 +60,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://127.0.0.1:3001"
+  "proxy": "http://localhost:3001"
 }
