--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-rate-limit": "^6.10.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "framer-motion": "^10.16.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
