--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@mui/material": "^5.14.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,6 +19,7 @@
     "express-validator": "^7.0.1",
     "framer-motion": "^10.16.2",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
