--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
   "devDependencies": {
     "react-scripts": "5.0.1"
   },
+  "engines": {
+    "node": "v20.5.1",
+    "npm": "9.8.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
