--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "framer-motion": "^10.16.2",
+    "gh-pages": "^6.0.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.4",
@@ -44,6 +45,8 @@
     "node": "v20.5.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "echo mascotarchive.com > ./build/CNAME && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -67,5 +70,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "homepage": "https://mascotarchive.com/"
 }
