--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-scripts": "5.0.1"
   },
   "engines": {
-    "node": "v20.5.1"
+    "node": "v20.5.1",
+    "npm": "9.8.1"
   },
   "scripts": {
     "predeploy": "npm run build",
