changing scripts-start

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "echo mascotarchive.com > ./build/CNAME && gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
